[Material node editor] default value for "normal" input of a node group not taken into account #46406

Closed
opened 2015-10-07 15:09:01 +02:00 by François DAUBINÉ · 17 comments

System Information
No matter

Blender Version
Broken: 2.75

Short description of error
A "normal" input is defined in a node group and a default value is set for this input (in the right panel of the node editor). If this input is not connected outside of the node group, the default value is not taken into account and the actual value is random.

Exact steps for others to reproduce the error
No matter (see blend file)Bug_normal.blend

Bug_screenshot.PNG

**System Information** No matter **Blender Version** Broken: 2.75 **Short description of error** A "normal" input is defined in a node group and a default value is set for this input (in the right panel of the node editor). If this input is not connected outside of the node group, the default value is not taken into account and the actual value is random. **Exact steps for others to reproduce the error** No matter (see blend file)[Bug_normal.blend](https://archive.blender.org/developer/F243128/Bug_normal.blend) ![Bug_screenshot.PNG](https://archive.blender.org/developer/F243129/Bug_screenshot.PNG)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @momotoh

Added subscriber: @momotoh
Sergey Sharybin was assigned by Bastien Montagne 2015-10-08 10:36:40 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 1730c3666f

This issue was referenced by 1730c3666fd8a042a74100697fce00cc3e04a636

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 307d4b3139

This issue was referenced by 307d4b3139c400c3131df7b59e4504769d627f7a

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

I've reverted this fix, since it's breaking Cycles node groups.

I think this was actually rendering correctly, it should not use the default value but the one in the group node. However the Normal input has its value hidden, which is confusing.

I've reverted this fix, since it's breaking Cycles node groups. I think this was actually rendering correctly, it should not use the default value but the one in the group node. However the Normal input has its value hidden, which is confusing.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

@brecht, you're right. Default value in the settings only affects newly added node group instances. That's a bit confusing (well, big enough to confuse myself :( ) from the UI interaction point of view but indeed everything worked as expected.

Improvements to communication are possible, but they're happening outside of the bug tracker.

@brecht, That being said, what if we simply expose vector value "editor" to the group node (similar to how it's done for other vector nodes like Vector Transform) ?

@brecht, you're right. Default value in the settings only affects newly added node group instances. That's a bit confusing (well, big enough to confuse myself :( ) from the UI interaction point of view but indeed everything worked as expected. Improvements to communication are possible, but they're happening outside of the bug tracker. @brecht, That being said, what if we simply expose vector value "editor" to the group node (similar to how it's done for other vector nodes like Vector Transform) ?

For BSDF nodes the vector value editor is hidden, because the value will not be used, it uses the surface normal. If you put that BSDF node in a group the flag to indicate that the editor should be hidden is inherited.

That's fine, the problem happens when you remove that BSDF node from the group, then hiding the value editor is wrong. It could be smarter about that, not sure what the best way to solve that would be.

For BSDF nodes the vector value editor is hidden, because the value will not be used, it uses the surface normal. If you put that BSDF node in a group the flag to indicate that the editor should be hidden is inherited. That's fine, the problem happens when you remove that BSDF node from the group, then hiding the value editor is wrong. It could be smarter about that, not sure what the best way to solve that would be.

This issue was referenced by blender/cycles@6973516c33

This issue was referenced by blender/cycles@6973516c33d1a9d6a6735dfafeb689eeed45f40f

This issue was referenced by blender/cycles@68d42cca03

This issue was referenced by blender/cycles@68d42cca031bd756fda1fe33570b36b7f08dab18

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Resolved' to: 'Archived'

Changed status from 'Resolved' to: 'Archived'

Eeh, porting commit to Cycles repository marked the report as resolved while in fact it's not resolved.

To be clear: there are actually several other issues reported here about behavior of node group inputs which are in fact related to this one. For example, you can't switch socket type from vector to color and vice versa.

While it's confusing, it's not really a bug since it actually behaves as it was intended from code side. Surely improvements are possible, we'll look into this as a part of TODO work. Noted the report there: http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Editors#Node_Editor

Eeh, porting commit to Cycles repository marked the report as resolved while in fact it's not resolved. To be clear: there are actually several other issues reported here about behavior of node group inputs which are in fact related to this one. For example, you can't switch socket type from vector to color and vice versa. While it's confusing, it's not really a bug since it actually behaves as it was intended from code side. Surely improvements are possible, we'll look into this as a part of TODO work. Noted the report there: http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Editors#Node_Editor
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46406
No description provided.