Fix T46406: Cycles ignores default socket value associated with group socket